feat: new styles for landing

--- a/src/css/advantages.css
+++ b/src/css/advantages.css
@@ -1,10 +1,17 @@
 /* Advantages */
 
-.advantages__accent {
+.advantages__lead {
   font-size: 1.875rem;
-  text-transform: uppercase;
-  color: var(--light-gray);
   border-top: 1px solid var(--light-green);
   border-bottom: 1px solid var(--light-green);
   padding: var(--gap-1) 0;
+}
+
+.advantages__list {
+  border-bottom: 1px solid var(--light-green);
+}
+
+.advantages__item {
+  border: none;
+  padding-bottom: 0;
 }
