--- a/src/css/base.css
+++ b/src/css/base.css
@@ -26,3 +26,42 @@
 .image {
   width: 100%;
 }
+
+h1,
+h2,
+p,
+img {
+  margin: 0 0 var(--gap-1);
+}
+
+ol,
+ul {
+  padding: 0;
+  list-style-type: none;
+  margin: 0;
+}
+
+ol {
+  counter-reset: item;
+}
+
+ol li {
+  display: block;
+  margin-bottom: 1em;
+  padding: 0 1.5em 0.5em;
+  border-bottom: 1px solid var(--light-green);
+}
+
+ol li::before {
+  display: block;
+  content: "0" counter(item) "/";
+  counter-increment: item;
+  font-style: italic;
+  color: var(--light-gray);
+  margin: 0 0 0.5em -1.5em;
+}
+
+a {
+  color: var(--white);
+  text-decoration: none;
+}
