--- a/src/css/page.css
+++ b/src/css/page.css
@@ -7,11 +7,15 @@
 .page__body {
   padding: var(--page-paddings);
   margin: 0;
-  font-family: PPNeueMontreal, Arial, sans-serif;
+  font-family: "Neue Montreal", serif;
   background-color: var(--page-background-color);
   color: var(--white);
   font-style: normal;
   font-weight: 400;
   font-size: 1.25rem;
   line-height: 1.2;
+}
+
+.page__section {
+  margin-bottom: var(--gap-2);
 }
