--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,26 +1,9 @@
 /* About */
 
 .about {
-  padding: var(--gap-1) 0;
-}
-
-.about__title {
-  margin: 0 0 var(--gap-1);
-}
-
-.about__lead {
-  margin: 0 0 var(--gap-1);
-}
-
-.about__image {
-  margin: 0 0 var(--gap-1);
-}
-
-.about__description {
-  margin: 0 0 var(--gap-1);
+  /* padding: var(--gap-1) 0; */
 }
 
 .about__values {
-  margin: 0 0 var(--gap-1);
   color: var(--light-gray);
 }
