--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,13 @@
 @import url("./fonts.css");
 @import url("./variables.css");
 @import url("./base.css");
+@import url("./contact-btn.css");
 @import url("./page.css");
 @import url("./hero.css");
 @import url("./about.css");
 @import url("./advantages.css");
+@import url("./numbers.css");
+@import url("./services.css");
+@import url("./team.css");
+@import url("./customers.css");
+@import url("./consultation.css");
