--- a/src/css/page.css
+++ b/src/css/page.css
@@ -5,15 +5,18 @@
 }
 
 .page__body {
-  padding: var(--page-paddings);
   margin: 0;
-  font-family: "Neue Montreal", serif;
+  font-family: "Neue Montreal", Arial, sans-serif;
   background-color: var(--page-background-color);
   color: var(--white);
   font-style: normal;
   font-weight: 400;
   font-size: 1.25rem;
   line-height: 1.2;
+}
+
+.page__main {
+  padding: 0 var(--page-x-paddings);
 }
 
 .page__section {
