--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -6,7 +6,8 @@
   --green: #bfe55e;
   --light-green: #f3ffce;
   --page-background-color: var(--black);
-  --page-paddings: 30px 20px;
+  --page-x-paddings: 20px;
+  --gap-0: 10px;
   --gap-1: 35px;
   --gap-2: 70px;
 }
