--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,6 +3,10 @@
 @import url("./base.css");
 @import url("./contact-btn.css");
 @import url("./page.css");
+@import url("./page-header.css");
+@import url("./main-nav.css");
+@import url("./site-list.css");
+@import url("./social-list.css");
 @import url("./hero.css");
 @import url("./about.css");
 @import url("./advantages.css");
