--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,7 @@
 @import url("./fonts.css");
 @import url("./variables.css");
 @import url("./base.css");
-@import url("./contact-btn.css");
+@import url("./link-btn.css");
 @import url("./page.css");
 @import url("./page-header.css");
 @import url("./main-nav.css");
