--- a/src/css/site-list.css
+++ b/src/css/site-list.css
@@ -1,18 +1,30 @@
+/* Site list */
 .site-list {
   display: flex;
   flex-direction: column;
-  gap: var(--gap-1);
+  gap: var(--gap-1) 40px;
 }
 
+@media (width >= 1200px) {
+  .site-list {
+    flex-flow: row wrap;
+  }
+}
+
+/* Site list Item */
 .site-list__item a {
-  display: block;
-  text-align: center;
   padding: 9px;
+  display: block;
   box-sizing: border-box;
-  min-width: 115px;
   border: 1px solid var(--black);
-  border-radius: 30px;
   color: var(--black);
   font-size: 1.125rem;
-  text-transform: uppercase;
+  min-width: 115px;
+  text-align: center;
+}
+
+@media (width >= 1200px) {
+  .site-list__item:first-child {
+    display: none;
+  }
 }
