--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,6 +12,7 @@
 @import url("./advantages.css");
 @import url("./numbers.css");
 @import url("./services.css");
+@import url("./stages.css");
 @import url("./team.css");
 @import url("./customers.css");
 @import url("./consultation.css");
