--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,5 +1,48 @@
 /* Hero */
+.hero {
+  display: grid;
+  grid-template-columns: 1fr;
+}
 
+@media (width >= 1200px) {
+  .hero {
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+  }
+
+  .hero::after {
+    content: "";
+    display: block;
+    width: 46px;
+    height: 46px;
+    margin-top: 50px;
+    justify-self: center;
+    background-image: url("../assets/link.svg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    grid-column: 1/3;
+    transform: rotate(135deg);
+  }
+}
+
+/* Hero Time */
+.hero__time {
+  display: none;
+}
+
+@media (width >= 1200px) {
+  .hero__time {
+    display: block;
+    grid-column: 2;
+    margin-bottom: 0;
+    justify-self: end;
+    font-size: 1.125rem;
+    font-style: italic;
+    color: var(--light-gray);
+  }
+}
+
+/* Hero Team name */
 .hero__team-name {
   font-weight: 500;
   font-size: 3.75rem;
@@ -8,14 +51,41 @@
   color: var(--green);
 }
 
-.hero__description {
-  font-weight: 400;
-  font-size: 1.25rem;
-  line-height: 1.2;
-  text-transform: uppercase;
-  margin-bottom: var(--gap-2);
+@media (width >= 1200px) {
+  .hero__team-name {
+    font-size: 8.125rem;
+  }
 }
 
+/* Hero Secription */
+@media (width >= 1200px) {
+  .hero__description {
+    font-size: 2.3125rem;
+    margin-left: auto;
+  }
+}
+
+/* Hero accent */
 .hero__accent {
   color: var(--green);
+}
+
+/* Hero Image */
+@media (width >= 1200px) {
+  .hero__image {
+    grid-column: 1/3;
+  }
+}
+
+/* Hero Link to contacts */
+.hero__link-to-contacts {
+  justify-self: start;
+}
+
+@media (width >= 1200px) {
+  .hero__link-to-contacts {
+    grid-column: 1/3;
+    align-self: center;
+    justify-self: center;
+  }
 }
