--- a/src/css/services.css
+++ b/src/css/services.css
@@ -1,7 +1,33 @@
+/* Services */
+.services {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+@media (width >= 1200px) {
+  .services {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+/* Services List */
+.services__list {
+  border-top: 1px solid var(--light-green);
+  padding: 20px 0;
+}
+
+@media (width >= 1200px) {
+  .services__list {
+    grid-column: 1/3;
+  }
+}
+
+/* Services Item */
 .services__item {
   position: relative;
 }
 
+/* Services Link */
 .services__link {
   position: absolute;
   right: 0;
