--- a/src/css/site-list.css
+++ b/src/css/site-list.css
@@ -16,11 +16,16 @@
   padding: 9px;
   display: block;
   box-sizing: border-box;
-  border: 1px solid var(--black);
-  color: var(--black);
   font-size: 1.125rem;
   min-width: 115px;
   text-align: center;
+}
+
+@media (width < 1200px) {
+  .site-list__item:first-child {
+    border: 1px solid var(--black);
+    color: var(--black);
+  }
 }
 
 @media (width >= 1200px) {
