--- a/src/css/link-btn.css
+++ b/src/css/link-btn.css
@@ -9,10 +9,9 @@
   text-decoration: none;
   color: var(--white);
   background: transparent;
-  outline: none;
+  outline-offset: 5px;
 }
 
-.link-btn:hover,
-.link-btn:focus {
+.link-btn:hover {
   background-color: var(--green);
 }
