--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -6,6 +6,7 @@
   --green: #bfe55e;
   --light-green: #f3ffce;
   --page-background-color: var(--black);
+  --header-background-color: #202020ee;
   --page-x-paddings: 20px;
   --gap-0: 10px;
   --gap-1: 35px;
