--- a/src/css/main-nav.css
+++ b/src/css/main-nav.css
@@ -8,14 +8,15 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  min-height: 100vh;
+  height: 100vh;
   background-color: var(--green);
   padding: 28px 20px;
   box-sizing: border-box;
+  z-index: 100;
 }
 
 @media (width >= 1200px) {
