--- a/src/css/page.css
+++ b/src/css/page.css
@@ -32,9 +32,10 @@
 }
 
 .page__body--nav-opened {
-  height: 100vh;
-  overflow-y: hidden;
-  position: fixed;
+  touch-action: none;
+  -webkit-overflow-scrolling: none;
+  overflow: hidden;
+  overscroll-behavior: none;
 }
 
 @media (width >= 1200px) {
