--- a/src/css/main-nav.css
+++ b/src/css/main-nav.css
@@ -4,19 +4,22 @@
   gap: var(--gap-1);
 }
 
-.main-nav--opened {
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  background-color: var(--green);
-  padding: 28px 20px;
-  box-sizing: border-box;
-  z-index: 100;
+@media (width < 1200px) {
+  .main-nav--opened {
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--green);
+    padding: 28px 20px;
+    box-sizing: border-box;
+    overflow-y: auto;
+    transition: all ease 0.4s;
+  }
 }
 
 @media (width >= 1200px) {
