--- a/src/css/contacts.css
+++ b/src/css/contacts.css
@@ -61,6 +61,7 @@
 @media (width >= 1200px) {
   .contacts__up-btn {
     grid-column: 1/3;
+    justify-self: center;
     font-size: 1.125rem;
   }
 }
