--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -4,9 +4,10 @@
   grid-template-columns: 1fr;
 }
 
-@media (width >= 1200px) {
+@media (width >= 1025px) {
   .hero {
     grid-template-columns: 1fr 1fr;
+    gap: 0 1em;
     align-items: center;
   }
 
@@ -30,15 +31,21 @@
   display: none;
 }
 
-@media (width >= 1200px) {
+@media (width >= 1025px) {
   .hero__time {
     display: block;
     grid-column: 2;
-    margin-bottom: 0;
+    margin-bottom: 0.5em;
     justify-self: end;
     font-size: 1.125rem;
     font-style: italic;
     color: var(--light-gray);
+  }
+}
+
+@media (width >= 1440px) {
+  .hero__time {
+    margin-bottom: 0;
   }
 }
 
@@ -51,17 +58,39 @@
   color: var(--green);
 }
 
-@media (width >= 1200px) {
+@media (width >= 1025px) {
+  .hero__team-name {
+    font-size: 6rem;
+  }
+}
+
+@media (width >= 1440px) {
   .hero__team-name {
     font-size: 8.125rem;
   }
 }
 
 /* Hero Secription */
-@media (width >= 1200px) {
+.hero__description {
+  /* width: 572px;/ */
+}
+
+@media (width >= 768px) {
   .hero__description {
     font-size: 2.3125rem;
+  }
+}
+
+@media (width >= 1025px) {
+  .hero__description {
+    width: 455px;
     margin-left: auto;
+  }
+}
+
+@media (width >= 1240px) {
+  .hero__description {
+    width: 572px;
   }
 }
 
@@ -71,7 +100,7 @@
 }
 
 /* Hero Image */
-@media (width >= 1200px) {
+@media (width >= 1025px) {
   .hero__image {
     grid-column: 1/3;
   }
@@ -82,7 +111,7 @@
   justify-self: start;
 }
 
-@media (width >= 1200px) {
+@media (width >= 1025px) {
   .hero__link-to-contacts {
     grid-column: 1/3;
     align-self: center;
