--- a/src/css/page-header.css
+++ b/src/css/page-header.css
@@ -10,7 +10,7 @@
   backdrop-filter: saturate(180%) blur(10px);
 }
 
-@media (width < 1200px) {
+@media (width <= 1024px) {
   .page__body--nav-opened .page-header {
     backdrop-filter: none;
     height: 100vh;
