--- a/src/css/page.css
+++ b/src/css/page.css
@@ -32,7 +32,7 @@
   margin: 0;
 }
 
-@media (width < 1200px) {
+@media (width <= 1024px) {
   .page__body--nav-opened {
     touch-action: none;
     -webkit-overflow-scrolling: none;
@@ -41,7 +41,7 @@
   }
 }
 
-@media (width >= 1200px) {
+@media (width >= 1025px) {
   .page__body {
     font-size: 1.875rem;
   }
