feat: advantages tablet styles

--- a/src/css/advantages.css
+++ b/src/css/advantages.css
@@ -8,7 +8,7 @@
 @media (width >= 1025px) {
   .advantages__inner {
     grid-template-columns: 1fr 1fr;
-    gap: 100px;
+    gap: var(--gap-x);
   }
 }
 
